# persephonep

./: .gitignore  LICENSE  MANIFEST.in  README.md  func_persephone.py  func_persephonep.py  persephone.py  persephonep.py  requirements.txt  setup.cfg  setup.py  tab_controller.py  tox.ini
.circleci/: config.yml
persephonep/: __init__.py  persephonep.py  tab_controller.py
src/persephonep/: __init__.py  config_controller.py  download_controller.py  func_persephonep.py  persephonep.py  tab_controller.py
tests/: conftest.py  test_func_persephonep.py  test_persephonep.py
