[metadata]
name = persephonep
version = attr:: persephonep.__version__
author = Shin Kurita
url = https://github.com/montblanc18/persephonep
license_file = LICENSE
description = persephonep: Web browser with Python3 and PyQt5
long_description = file: README.md

[options]
zip_safe = False
packages = find:
install_requires = 
    PyQt5 >= 5.12
    PyQtWebEngine >=5.12

[tool:pytest]
qt_api =pyqt5